--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  dio: ^4.0.6
   dartz: ^0.10.1
   get_it: ^7.2.0
   equatable: ^2.0.5
   flutter_bloc: ^8.1.1
   fluttertoast: ^8.2.4
+  sqflite: ^2.0.0+3
   nb_utils: ^6.0.2
   flutter_screenutil: ^5.9.0
 
