--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.1
   fluttertoast: ^8.2.4
-  sqflite: ^2.0.0+3
+  sqflite: ^2.3.0
   nb_utils: ^6.0.2
   flutter_screenutil: ^5.9.0
 
