--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,9 @@ dependencies:
   fluttertoast: ^8.2.4
   sqflite: ^2.3.0
   nb_utils: ^6.0.2
+  flutter_staggered_grid_view: ^0.4.0-nullsafety.3
   flutter_screenutil: ^5.9.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
